# usb_modem_lib

./: README.md  detect_modem.py  modem_command.py  pyproject.toml  quectel_at_lib.py  runenv  usb_modem_at_lib.html  usb_modem_at_lib.py
modem_lib/: __init__.py  modem_command.py  quectel_modem.py  usb_modem_at_lib.py
