[tool.poetry]
name = "usb_modem_lib"
version = "0.9"
description = "Python package to manage usb modems"
authors = ["laurent <laurent.carre@sterwen-technology.eu>"]
license = "Eclipse Public Licence 2.0"
readme = "README.md"
packages = [ {include = "modem_lib"}]

[tool.poetry.scripts]
modem_command = 'modem_lib.modem_command:main'

[tool.poetry.dependencies]
python = ">=3.7"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
